Fixed renponsive first page

--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
 
             <!--Navigation-->
             <nav class="navbar">
-                <div id="logo">Your Logo here</div>
+                <div id="logo">SÖTT OCH ELEGANT</div>
 
                 <!-- MENU ITEMS-->
                 <label for="drop" class="toggle">MENU</label>
@@ -50,20 +50,6 @@
                             <li><a href="#">Catering</a></li>
                         </ul>
                     </li>
-                    <!-- <li class="subNav"><a href="#">PRODUCTS</a>
-                        <ul>
-                            <li><a href="#">Bakeries</a></li>
-                            <li><a href="#">Sanwiches</a></li>
-                            <li><a href="#">Cakes</a></li>
-                            <li><a href="#">Cookies & Snack</a></li>
-                        </ul>
-                    </li> -->
-                    <!-- <li class="subNav"><a href="#">SERVICES</a>
-                        <ul>
-                            <li><a href="#">Wedding</a></li>
-                            <li><a href="#">Catering</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="#">LOCATION</a></li>
                     <li><a href="#">CONTACT US</a></li>
                 </ul>
@@ -74,20 +60,13 @@
         <!--start Main content-->
         <main class="mainContent">
             <div class="container">
-                <img class="cafeHeadContent" src="pics/firstpage/cafeHeadContent_fixed.jpg" alt="sött och elegant, cafe" style="width:100%;">
+                <img class="cafeHeadImg" src="pics/firstpage/cafeHeadContent_fixed.jpg" alt="sött och elegant, cafe" style="width:100%;">
                 <div class="imgText">
                     <h2>CAFE · EVENTS · BAKERY</h2>
                     <p>Stockholm, Sweden</p>
                 </div>
             </div>
-            <!--Head img-->
-            <!-- <div class="imgMainContent">
-                <img class="cafeHeadContent" src="pics/firstpage/cafeHeadContent_fixed.jpg" alt="sött och elegant, cafe">
-                <div class="imgText">
-                    <h2>CAFE · EVENTS · BAKERY</h2>
-                    <p>Stockholm, Sweden</p>
-                </div>
-            </div> -->
+
             <!--content-->
             <div class="contentWrapper">
                 <section id="firstContent">
@@ -95,6 +74,7 @@
                     <span class="border"></span>
                     <p>Baked fresh everyday</p>
                 </section>
+                <!--Image content-->
                 <section id="secondContent">
                     <div class="row">
                         <div class="column">
@@ -105,19 +85,6 @@
                             <img src="pics/firstpage/cafe1_fixed.jpg" alt="cafe picture">
                             <img src="pics/firstpage/waffel_fixed.jpg" alt="cafe picture">
                             <img src="pics/firstpage/opening-hours.jpg" alt="cafe picture">
-
-                            <!-- <div class="openingTime">
-                                <div class="center">
-                                    <h2>OPENING HOURS</h2>
-                                    <p>
-                                        Monday-Friday<br> 08.00-18.00
-                                    </p>
-                                    <p>
-                                        Saturday-Sunday<br> 10.00-20.00
-                                    </p>
-                                </div>
-
-                            </div> -->
                         </div>
                         <div class="column">
                             <img src="pics/firstpage/cafe2_fixed.jpg" alt="cafe picture">
@@ -155,15 +122,5 @@
         </footer>
     </div>
 </body>
-<script>
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
-        }
-    }
-</script>
 
 </html>
