Fixed pics and About Us

--- a/Home.html
+++ b/Home.html
@@ -12,10 +12,6 @@
     <div class="wrapper">
         <!--Header-->
         <header class="topHeader">
-            <!--Logo-->
-            <!-- <a href="Home.html">
-                <img class="logoWebsite" src="Logo/logo_transparent_fixed2.png" alt="Sött och Elegant">
-            </a> -->
 
             <!--Navigation-->
             <nav class="navbar">
@@ -26,8 +22,8 @@
                 <input type="checkbox" id="drop">
 
                 <ul class="menu">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="Home.html">HOME</a></li>
+                    <li><a href="AboutUs.html">ABOUT US</a></li>
                     <li>
                         <!-- First Tier Drop Down -->
                         <label for="drop-1" class="toggle">PRODUCTS +</label>
