--- a/AboutUs.html
+++ b/AboutUs.html
@@ -71,11 +71,51 @@
                         enim in nisl aliquam, sit amet iaculis dolor imperdiet. Praesent varius ligula nec dignissim dignissim. Nulla facilisi. Integer porta lacinia pharetra. Suspendisse eu eleifend eros. Integer consectetur ex id pulvinar tincidunt.
                         Morbi imperdiet risus at consequat dignissim. Aenean nec malesuada metus, in lobortis mauris. Aenean elementum placerat quam, sed pulvinar mi scelerisque quis. </p>
                 </section>
+
+                <!--Image content-->
+                <section id="secondContent">
+                    <div class="fixpics">
+                        <div class="row">
+                            <div class="column">
+                                <img src="pics/AboutMe/person4_fixed.jpg" alt="cafe picture">
+                                <img src="pics/AboutMe/person2_fixed.jpg" alt="cafe picture">
+                            </div>
+                            <div class="column">
+                                <img src="pics/AboutMe/person5_fixed.jpg" alt="cafe picture">
+                                <img src="pics/AboutMe/person_fixed.jpg" alt="cafe picture">
+                                <img src="pics/AboutMe/person3_fixed.jpg" alt="cafe picture">
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
-
-
-
         </main>
+
+
+        <!--Footer-->
+        <footer>
+            <section id="footerText">
+                <div class="footerContent">
+                    <h4><strong>LOCATION</strong></h4>
+                    <em>Drottningatan 20,<br>
+                        Stockholm, Sweden
+                    </em>
+                </div>
+                <div class="footerContent">
+                    <h4><strong>CONTACT</strong></h4>
+                    <p>+4873 123 4567</p>
+                </div>
+                <div class="footerContent">
+                    <h4><strong>EMAIL</strong></h4>
+                    <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
+                </div>
+            </section>
+            <section id="socialmedia">
+                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+                <a href="https://www.instragram.com" class="fa fa-instagram"></a>
+                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
+            </section>
+        </footer>
     </div>
 </body>
 
