Fixed contact us

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -46,8 +46,8 @@
                             <li><a href="#">Catering</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">LOCATION</a></li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="Location.html">LOCATION</a></li>
+                    <li><a href="ContactUs.html">CONTACT US</a></li>
                 </ul>
             </nav>
         </header>
